--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Hanken Grotesk, sans-serif;
+    font-size: 18px;
 }
 
 :root {
@@ -32,74 +33,66 @@ body {
     min-height: 100vh;
 }
 
-.container {
-    display: flex;
-    max-width: 700px;
-    max-height: 600px;
-    border-radius: 1rem;
-    box-shadow: 30px 30px 30px var(--color-paleBlue);
-}
-
-.container p {
-    font-size: 18px;
-}
-
-/*LEFT SIDE*/
 .result {
-    width: 47%;
-    border-radius: 15px;
+    border-radius: 0 0 2rem 2rem;
     background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     color: var(--color-white);
 }
 
-.result h2 {
+.result-title {
     text-align: center;
-    padding: 35px;
-    color: var(--color-paleBlue);
+    color: var(--color-lightLavender);
+    padding-top: 1.3rem;
+}
+
+.circle {
+    width: 7.5rem;
+    height: 7.5rem;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+    margin: 1rem auto;
+    background-image: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
+}
+
+.points {
+    font-size: 3rem;
+}
+
+.max-points {
+    margin-bottom: 0;
 }
 
 .message-title {
-    font-size: 32px;
+    font-size: 1.5rem;
     text-align: center;
-    padding: 20px;
+    margin-top: 1rem;
 }
 
-.result>p {
+.message {
+    display: flex;
+    text-align: center;
+    padding: 1rem 5rem;
+}
+
+/* .result>p {
     width: 70%;
     margin: auto;
     text-align: center;
     font-size: 15px;
     color: hsl(241, 100%, 89%);
-}
+} */
 
-.circle {
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    text-align: center;
-    margin: 0 auto;
-    background-image: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
-}
 
-.circle h3 {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    padding: 35px 0 0 0;
-    font-size: 80px;
-}
-
-.circle p {
-    color: hsl(241, 100%, 89%);
-}
 
 /*END LEFT SIDE*/
 
 /*RIGHT SIDE*/
 .summary {
-    width: 50%;
     margin-left: -15px;
-    border-radius: 0 1rem 1rem 0;
     background-color: var(--color-white);
 }
 
@@ -189,7 +182,7 @@ footer {
 
 
 /*SMALL SCREEN*/
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
 
     .result {
         position: absolute;
@@ -228,6 +221,6 @@ footer {
         top: 45%;
         min-width: 100vw;
     }
-}
+} */
 
 /*END SMALL SCREEN*/
